fixed the question box height and the overall height of the gameboard so that the assets don't get overlapped when the question is too long

--- a/covid-app/src/index.css
+++ b/covid-app/src/index.css
@@ -101,7 +101,7 @@ code {
 
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 800px) {
   .card {
       width: 30rem;
   }
